Cleaned up Minecraft flavor classes